--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,7 @@
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +18,13 @@
         android:theme="@style/Theme.WLT_Groupe03"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".DisplayingAllItems"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ModifyProfileActivity"
             android:exported="false">
@@ -34,7 +40,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".DetailActivity"
+            android:name=".UpdateArticleActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -48,7 +54,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".DisplayingItems"
+            android:name=".DisplayingUsersItems"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
